# pop-rs

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  LICENSE-VENDORED.md  README.md  Taskfile.dist.yaml
.github/workflows/: ci.yml
crates/pop-assets/: Cargo.toml
crates/pop-assets/src/: bgdata.rs  discovery.rs  hires.rs  level.rs  lib.rs  scene.rs
crates/pop-assets/src/draz/: image_table.rs  mod.rs  screen.rs
crates/pop-cli/: Cargo.toml
crates/pop-cli/src/: discover.rs  draz.rs  editor.rs  info.rs  main.rs
crates/pop-difftest/: Cargo.toml
crates/pop-difftest/src/: main.rs
crates/pop-rs/: Cargo.toml
crates/pop-rs/src/: game.rs  lib.rs
crates/pop-rs/src/backend/: mod.rs
crates/pop-rs/src/data/: mod.rs
crates/pop-rs/src/modules/: mod.rs
docs/: architecture.md  copy-protection.md  plan-slot-aliases.md
ir/crate/: Cargo.toml
ir/crate/src/: auto.rs  boot.rs  coll.rs  cpu.rs  ctrl.rs  ctrlsubs.rs  dispatch.rs  ext.rs  frameadv.rs  gamebg.rs  grafix.rs  hires.rs  lib.rs  master.rs  misc.rs  mover.rs  sound.rs  specialk.rs  subs.rs  sym.rs  topctrl.rs  unpack.rs
ir/pass0/: equates.json
ir/pilot/: auto_combat.ir1  checkfloor.ir1  checkfloor.ir2  checkfloor.ir3  chgshadposn.ir3  chgshadposn.loops.ir3  chgshadposn.pass3.ir3  chgshadposn.rs  cmpspace.match.ir3  cup.pass3.ir3  cup.rs  fastblack.smc.ir1  pause.loops.ir3  rndp.ir1
ir/raw/: AUTO.ir1  AUTO.ir2  BOOT.ir1  BOOT.ir2  COLL.ir1  COLL.ir2  CTRL.ir1  CTRL.ir2  CTRLSUBS.ir1  CTRLSUBS.ir2  FRAMEADV.ir1  FRAMEADV.ir2  GAMEBG.ir1  GAMEBG.ir2  GRAFIX.ir1  GRAFIX.ir2  HIRES.ir1  HIRES.ir2  MASTER.ir1  MASTER.ir2  MISC.ir1  MISC.ir2  MOVER.ir1  MOVER.ir2  SOUND.ir1  SOUND.ir2  SPECIALK.ir1  SPECIALK.ir2  SUBS.ir1  SUBS.ir2  SUMMARY.md  TOPCTRL.ir1  TOPCTRL.ir2  UNPACK.ir1  UNPACK.ir2
ir/raw-rs/: AUTO.rs  BOOT.rs  COLL.rs  CTRL.rs  CTRLSUBS.rs  FRAMEADV.rs  GAMEBG.rs  GRAFIX.rs  HIRES.rs  MASTER.rs  MISC.rs  MOVER.rs  SOUND.rs  SPECIALK.rs  SUBS.rs  SUMMARY.md  TOPCTRL.rs  UNPACK.rs
tooling/pop_lifter/: README.md  pyproject.toml
tooling/pop_lifter/src/pop_lifter/: __init__.py  cfg.py  cli.py  interp_ir1.py  interp_ir3.py  ir1.py  ir3.py  pass0_lex.py  pass0_parse.py  pass1_lift.py  pass2_reloop.py  pass2_struct.py  pass3_domain.py  pass3_expr.py  pass3_loops.py  pass3_match.py  pass3_smc.py  pass3_temps.py  pass4_crate.py  pass4_emit_rust.py  slot_aliases.py
tooling/pop_lifter/tests/: conftest.py  test_65816_stubs.py  test_artifacts.py  test_cfg.py  test_cli.py  test_crate_scaffold.py  test_differential.py  test_expr.py  test_full_source.py  test_interp_ir1.py  test_interp_ir3.py  test_lex.py  test_parse_eq.py  test_pass0_location_counter.py  test_pass1_65c02.py  test_pass1_indexed_abs.py  test_pass1_indirect_x.py  test_pass1_indirect_y.py  test_pass1_lastmile.py  test_pass1_lift.py  test_pass1_long_tail.py  test_pass1_medium_tail.py  test_pass1_non6502.py  test_pass1_operands.py  test_pass1_shifts.py  test_pass1_smc.py  test_pass1_stack.py  test_pass2_reloop.py  test_pass2_struct.py  test_pass3_expr.py  test_pass3_loops.py  test_pass3_match.py  test_pass3_rotate.py  test_pass3_shift.py  test_pass3_smc.py  test_pass3_temps.py  test_pass3_wide16.py  test_pass4_crate.py  test_pass4_emit.py  test_portable_paths.py  (+3 more)
