# The `pop` binary: a clap-based subcommand tree for working with
# Prince of Persia (Apple II) assets and (eventually) running the game.
# Phase 1 of the umbrella plan (#79) lands the asset-inspection
# subcommands here; the egui editor (#90) and the runtime entry will
# arrive behind their own Cargo features.
[package]
name = "pop-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Command-line tools for Prince of Persia (Apple II) assets."

[[bin]]
name = "pop"
path = "src/main.rs"

[lints]
workspace = true

[features]
# `pop editor` — egui level browser. Optional because the eframe / rfd
# trees are large and pull in native windowing system libs that aren't
# wanted for headless / CI builds. Requires a newer Rust than the
# default-feature build (eframe's MSRV moves faster than ours).
editor = ["dep:eframe", "dep:rfd"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
png = "0.17"
pop-assets = { path = "../pop-assets" }

eframe = { version = "0.29", optional = true, default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
rfd = { version = "0.15", optional = true }
