[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pop-lifter"
version = "0.0.0"
description = "Multi-pass lifter from Apple II 6502 (Merlin) assembly to Rust."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "EUPL-1.2" }
authors = [{ name = "pop-rs contributors" }]

[project.scripts]
pop-lifter = "pop_lifter.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pop_lifter"]

[tool.ruff]
line-length = 100
target-version = "py311"
